# code-sqlcad

./: .gitignore  1.1.cad_basic.ipynb  1.2.column_based_approach.ipynb  1.3.column_based_intermediate.ipynb  1.4.performance.ipynb  2.1.quantifiers.ipynb  2.2.general_approach.ipynb  2.3.nnv.ipynb  README.md  pyproject.toml  shell.nix
perftest-docker/: Dockerfile  README.md  impl_cad_basic.py  impl_cad_basic_nonrecursive.py  impl_column_based.py  impl_column_dense.py  impl_column_intermediate.py  plot_timings.py  pyproject.toml  run_tests.py
queries/basic/: example_4d.sql  nonrecursive.sql  recursive.sql  recursive_template.sql
queries/column-based/: 4dims.sql  template.sql
queries/column-based-intermediate/: lift.sql  no_results_table.sql  project.sql  results.sql  x_values.sql
queries/nn/: geometric.sql
queries/qe/: results.sql
smtlib/: abs_pwl.smt2  all_node_types.smt2  sum_of_pwls.smt2
util/: formula.py  nn.py  perftest.py  smtlib.py  sqlcad.py
