[project]
name = "neighbor-query"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.4",
    "ipykernel>=7.1.0",
    "ipympl>=0.10.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pysmt>=0.9.6",
    "torch>=2.10.0",
    "z3-solver>=4.16.0.0",
]
